Got a class object created
The class object is created but the name is wrong. It needs fixed later
but shows one class.